# DawnCC-Compiler

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  build.sh  buildPrivateDetector.sh  run.sh
AliasInstrumentation/: AliasInstrumentation.cpp  AliasInstrumentation.h  CMakeLists.txt  RegionCloneUtil.cpp  RegionCloneUtil.h
ArrayInference/: CMakeLists.txt  PtrRangeAnalysis.cpp  PtrRangeAnalysis.h  README.txt  SCEVRangeBuilder.cpp  SCEVRangeBuilder.h  ScopeTree.cpp  ScopeTree.h  annotateLoopParallel.cpp  annotateLoopParallel.h  constantsSimplify.cpp  constantsSimplify.h  llvm-patch.diff  recoverCode.cpp  recoverCode.h  recoverExpressions.cpp  recoverExpressions.h  recoverNames.cpp  recoverNames.h  regionReconstructor.cpp  regionReconstructor.h  restrictifier.cpp  restrictifier.h  writeExpressions.cpp  writeExpressions.h  writeInFile.cpp  writeInFile.h
ArrayInference/Coalescing/: CMakeLists.txt  Coalescing.cpp  Coalescing.h
ArrayInference/tests/: test1.c  test2.c  test3.c
CanParallelize/: CMakeLists.txt  CanParallelize.cpp  CanParallelize.h
DepBasedParallelLoopAnalysis/: CMakeLists.txt  ParallelLoopAnalysis.cpp  ParallelLoopAnalysis.h
ParallelLoopMetadata/: CMakeLists.txt  ParallelLoopMetadata.cpp  ParallelLoopMetadata.h
PrivateDetector/: CMakeLists.txt
PrivateDetector/privatedetector/: CMakeLists.txt  privatedetector.cpp
PtrRangeAnalysis/: CMakeLists.txt  PtrRangeAnalysis.cpp  PtrRangeAnalysis.h  SCEVRangeBuilder.cpp  SCEVRangeBuilder.h
ScopeFinder/: setup.sh
ScopeFinder/scope-finder/: CMakeLists.txt  README.txt  scope-finder.cpp
ScopeTree/: CMakeLists.txt  ScopeTree.cpp  ScopeTree.h
